logs/djext.log
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/djext'...
Listing './lib/python3.5/site-packages/djext/blame'...
Listing './lib/python3.5/site-packages/djext/blame/forms'...
Listing './lib/python3.5/site-packages/djext/datetime'...
Listing './lib/python3.5/site-packages/djext/datetime/forms'...
Listing './lib/python3.5/site-packages/djext/http'...
Compiling './lib/python3.5/site-packages/djext/http/exceptions.py'...
***   File "./lib/python3.5/site-packages/djext/http/exceptions.py", line 12
    raise KeyError(f'Status code {status_code} is already registered')
                                                                    ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/djext/json'...
Listing './lib/python3.5/site-packages/djext/json/auth'...
Listing './lib/python3.5/site-packages/djext/json/http'...
Listing './lib/python3.5/site-packages/djext/python'...
Listing './lib/python3.5/site-packages/djext/status'...
Listing './lib/python3.5/site-packages/djext/templates'...
Listing './lib/python3.5/site-packages/djext/templatetags'...
Listing './lib/python3.5/site-packages/djext-0.2.8.dist-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './share'...
Listing './share/python-wheels'...
